# ibgest

./: .gitignore  pyproject.toml
notebook/: ibgest_testbed.ipynb  test2d_bgsub.ipynb
src/ibgest/: config.py  estimation.py  filters.py  utils.py
