# project folder structure
# ibgest/
# ├── src/
# │   └── ibgest/
# │       ├── __init__.py
# │       ├── config.py
# │       ├── estimation.py
# │       ├── filters.py
# │       └── utils.py
# ├── notebook/
# │   └── ibgest_testbed.ipynb
# ├── test/
# │    └── ecg.npz
# └── pyproject.toml

# minimal build specification
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibgest"
version = "0.1.0"
# end of minimal build specification

description = "Low-frequency (iterative) background estimation"
readme = "README.md"
authors = [{name = "Daniel Elnatan", email = "delnatan@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/delnatan/ibgest"

